Kubernetes/Collabora/yamls/ig-collabora.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-online-https-redirect
  namespace: collabora-online
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-online-security
  namespace: collabora-online
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-online-websecure
  namespace: collabora-online
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`collabora-online.domain.com`)
    kind: Rule
    services:
    - name: collabora-online
      port: 9980 
      serversTransport: collabora-online-transport
    middlewares:
      - name: collabora-online-security
  tls:
    secretName: collabora-online-domain
    options:
      name: collabora-online-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-online-web
  namespace: collabora-online
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`collabora-online.domain.com`)
    kind: Rule
    services:
    - name: collabora-online
      port: 9980 
    middlewares:
      - name: collabora-online-https-redirect
